--- a/blog/3.md
+++ b/blog/3.md
@@ -390,7 +390,7 @@ export default defineConfig((env) => ({
 - 再次运行下项目
 ![plugin-electron.jpg](./images/plugin-electron.jpg)
 
-- **It's Worked！** 🎉 🎉 🎉 
+- ****It's Worked！**** 🎉 🎉 🎉 
 
 - 细心的童鞋可能发现了我们的代码上面还有一行
 
@@ -407,4 +407,4 @@ const fs = require("fs");
 
 - Vite 个人觉得是个不错的方案，毕竟打包工具早晚会推出历史舞台；Vite 往前又迈了 `0.5步`
 - Electron 的集成只是一个案例，从一个案例出发到写一个插件，你会更好的理解 Vite 设计、思想
-- 最后，不能什么都站在客观的角度去等待，更需要我们祖东的去**建设**
+- 最后，不能什么都站在客观的角度去等待，更需要我们主动的去**建设**
