--- a/blog/3.md
+++ b/blog/3.md
@@ -390,15 +390,7 @@ export default defineConfig((env) => ({
 - 再次运行下项目
 ![plugin-electron.jpg](./images/plugin-electron.jpg)
 
-- ****It's Worked！**** 🎉 🎉 🎉 
-
-- 细心的童鞋可能发现了我们的代码上面还有一行
-
-```js
-const fs = require("fs");
-```
-
-- 看到这个我**有点懵**，我也是开起来项目时候才发现的这，看来关于原生 API 人家 Vite 也是这么干的？可以我没有证据(源码还没看完)，但这确实不是我干的 😂
+- **It's Worked！** 🎉 🎉 🎉 
 
 - 好了，这个插件可以用了；再想想上面的关于 Rollup 的配置其实我们完全可以集成到 `vitejs-plugin-electron` 中的，这样会使 `vite.config.ts` 文件更少、更清晰；具体代码就不演示了，自己拉代码看看吧 🚀
 - [https://github.com/caoxiemeihao/vitejs-plugins/tree/main/electron](https://github.com/caoxiemeihao/vitejs-plugins/tree/main/electron)
